--- a/devops/dev.env
+++ b/devops/dev.env
@@ -1,8 +1,8 @@
 VERSION=1.0
-AUTHOR=Manuel Zegarra
+AUTHOR=Aldo Trucios
 APP=dev
 APP_MODULE=clientes
-DOCKER_REPOSITORY=mzegarra
+DOCKER_REPOSITORY=aldot25
 
 ENABLE_DOCKER=true
 ENABLE_CD=true
@@ -11,4 +11,4 @@ ENABLE_CD=true
 PROJECT_ID=devops202101
 CLUSTER_NAME=devops202101
 LOCATION=us-east4-c
-CREDENTIALS_ID=gke2
+CREDENTIALS_ID=gke
