--- a/devops/qa.env
+++ b/devops/qa.env
@@ -2,7 +2,7 @@ VERSION=1.0
 AUTHOR=Manuel Zegarra
 APP=qa
 APP_MODULE=clientes
-DOCKER_REPOSITORY=mzegarra
+DOCKER_REPOSITORY=aldot25
 
 ENABLE_DOCKER=true
 ENABLE_CD=true
@@ -11,4 +11,4 @@ ENABLE_CD=true
 PROJECT_ID=devops202101
 CLUSTER_NAME=devops202101
 LOCATION=us-east4-c
-CREDENTIALS_ID=gke2
+CREDENTIALS_ID=gke
